==> mx92054/Relay_9chn/Src/Mbsvr_comm.c <==
#include "Mbsvr_comm.h"
#include "SysTick.h"
#include <string.h>
#include <stdlib.h>

void ModbusSvr_block_init(Modbus_block *pblk, UART_HandleTypeDef* pUSARTx)
{
    pblk->station = 1;
    pblk->baudrate = 115200;

    pblk->uCoilStartAdr = 0;
    pblk->uCoilLen = 10;
    pblk->uCoilEndAdr = pblk->uCoilStartAdr + pblk->uCoilLen ;
    pblk->ptrCoils = (short *)malloc(pblk->uCoilLen * sizeof(short));
    if (pblk->ptrCoils == NULL)
        pblk->uCoilLen = 9999;
		else
			memset(pblk->ptrCoils,0,pblk->uCoilLen * sizeof(short)) ;

    pblk->uRegStartAdr = 0;
    pblk->uRegLen = 200 ;
    pblk->uRegEndAdr = pblk->uRegStartAdr + pblk->uRegLen ;
    pblk->ptrRegs = (short *)malloc(pblk->uRegLen * sizeof(short));
    if (pblk->ptrRegs == NULL)
        pblk->uRegLen = 9999;
		else
			memset(pblk->ptrRegs,0, pblk->uRegLen * sizeof(short)) ;

    pblk->uRomStartAdr = 0;
    pblk->uRomLen = 200;
    pblk->uRomEndAdr = pblk->uRomStartAdr + pblk->uRomLen;
    pblk->ptrRoms = (short *)malloc(pblk->uRomLen * sizeof(short));
    if (pblk->ptrRoms == NULL)
        pblk->uRomLen = 9999;
		else
			memset(pblk->ptrRoms, 0, pblk->uRomLen * sizeof(short)) ;

    switch (pblk->baudrate)
    {
    case 9600:
        pblk->uFrameInterval = 15;
        break;
    case 19200:
        pblk->uFrameInterval = 10;
        break;
    case 38400:
        pblk->uFrameInterval = 5;
        break;
    case 57600:
        pblk->uFrameInterval = 5;
        break;
    case 115200:
        pblk->uFrameInterval = 5;
        break;
    default:
        pblk->uFrameInterval = 10;
        break;
    }

    pblk->pos_msg = 0;
    pblk->bFrameStart = 0;
    pblk->nMBInterval = 0;
    pblk->bSaved = 1;

    pblk->tsk_buf = pblk->buffer;
    pblk->isr_buf = pblk->buffer + 256;

    pblk->pUsart = pUSARTx ;
    HAL_UART_Receive_IT(pblk->pUsart, &RxChar, 1);
}

static void ModbusSvr_normal_respose(Modbus_block *pblk)
{
    u16 uCrc1;

    //-----------Product CRC byte------------------------------------
    uCrc1 = CRC16(pblk->tsk_buf, pblk->trans_len - 2);
    pblk->tsk_buf[pblk->trans_len - 2] = uCrc1 & 0x00FF;
    pblk->tsk_buf[pblk->trans_len - 1] = uCrc1 >> 8;

    //-------------Transmitter frame---------------------------------
    Usart_SendBytes(pblk->pUsart, pblk->tsk_buf, pblk->trans_len);
}

static void ModbusSvr_error_respose(Modbus_block *pblk)
{
    u16 uCrc1;

    pblk->tsk_buf[1] |= 0x80;
    pblk->tsk_buf[2] = pblk->errno;

    //-----------Product CRC byte------------------------------------
    uCrc1 = CRC16(pblk->tsk_buf, 3);
    pblk->tsk_buf[3] = uCrc1 & 0x00FF;
    pblk->tsk_buf[4] = uCrc1 >> 8;

    //-------------Transmitter frame---------------------------------
    Usart_SendBytes(pblk->pUsart, pblk->tsk_buf, 5);
}

void Usart_SendByte(UART_HandleTypeDef *pUSARTx, uint8_t ch)
{
    if (HAL_UART_Transmit(pUSARTx, (uint8_t*)&ch, 1, 0xFFFF) != HAL_OK)
    {
        Error_Handler();
    }
}

void Usart_SendString(UART_HandleTypeDef *pUSARTx, char *str)
{
    if (HAL_UART_Transmit(pUSARTx, (uint8_t*)str, strlen(str), 0xFFFF) != HAL_OK)
    {
        Error_Handler();
    }
}

void Usart_SendHalfWord(UART_HandleTypeDef *pUSARTx, uint16_t ch)
{
    uint8_t temp_h, temp_l;

    temp_h = (ch & 0XFF00) >> 8;
    temp_l = ch & 0XFF;
    HAL_UART_Transmit(pUSARTx,(uint8_t*)&temp_h,1,0xFFFF) ;
    HAL_UART_Transmit(pUSARTx,(uint8_t*)&temp_l,1,0xFFFF) ;
}
