==> mx92054/Slave_Modbus_6/User/Mbsvr_comm.c <==
#include "Mbsvr_comm.h"
#include "bsp_innerflash.h"
#include "SysTick.h"
#include <string.h>
#include <stdlib.h>

void ModbusSvr_block_init(Modbus_block *pblk)
{
    unsigned short zone[100];

    Flash_Read16BitDatas(FLASH_USER_START_ADDR1, 100, (short *)zone);

    if (zone[90] == 0 || zone[90] > 254) //站地址设置检查
        zone[90] = 1;

    if (zone[91] != 96 && zone[91] != 192 && zone[91] != 384 && zone[91] != 576 && zone[91] != 1152)
        zone[91] = 1152; //波特率检查

    zone[92]++; //启动次数加一

    if (zone[94] < 200) //线圈地址及长度检查
        zone[94] = 200;
    if (zone[94] > 500)
        zone[94] = 500;
    if (zone[93] > 20000)
        zone[93] = 0;

    if (zone[96] < 200) //保持寄存器地址检查
        zone[96] = 200;
    if (zone[96] > 500)
        zone[96] = 500;
    if (zone[95] > 20000)
        zone[95] = 0;

    if (zone[98] < 200) //只读寄存器地址检查
        zone[98] = 200;
    if (zone[98] > 500)
        zone[98] = 500;
    if (zone[97] > 20000)
        zone[97] = 0;

    pblk->station = zone[90];
    pblk->baudrate = zone[91] * 100;

    pblk->uCoilStartAdr = zone[93];
    pblk->uCoilLen = zone[94];
    pblk->uCoilEndAdr = zone[93] + zone[94];
    pblk->ptrCoils = (short *)malloc(zone[94] * sizeof(short));
    if (pblk->ptrCoils == NULL)
        pblk->uCoilLen = 9999;

    pblk->uRegStartAdr = zone[95];
    pblk->uRegLen = zone[96];
    pblk->uRegEndAdr = zone[95] + zone[96];
    pblk->ptrRegs = (short *)malloc(zone[96] * sizeof(short));
    if (pblk->ptrRegs == NULL)
        pblk->uRegLen = 9999;

    pblk->uRomStartAdr = zone[97];
    pblk->uRomLen = zone[98];
    pblk->uRomEndAdr = zone[97] + zone[98];
    pblk->ptrRoms = (short *)malloc(zone[98] * sizeof(short));
    if (pblk->ptrRoms == NULL)
        pblk->uRomLen = 9999;

    memcpy(pblk->ptrRegs + pblk->uRegLen - 100, zone, 200);

    switch (pblk->baudrate)
    {
    case 9600:
        pblk->uFrameInterval = 15;
        break;
    case 19200:
        pblk->uFrameInterval = 10;
        break;
    case 38400:
        pblk->uFrameInterval = 5;
        break;
    case 57600:
        pblk->uFrameInterval = 5;
        break;
    case 115200:
        pblk->uFrameInterval = 5;
        break;
    default:
        pblk->uFrameInterval = 10;
        break;
    }

    pblk->pos_msg = 0;
    pblk->bFrameStart = 0;
    pblk->nMBInterval = 0;
    pblk->bSaved = 1;

    pblk->tsk_buf = pblk->buffer;
    pblk->isr_buf = pblk->buffer + 256;
}

static void ModbusSvr_normal_respose(Modbus_block *pblk, USART_TypeDef *pUSARTx)
{
    u16 uCrc1;
    int i;

    //-----------Product CRC byte------------------------------------
    uCrc1 = CRC16(pblk->tsk_buf, pblk->trans_len - 2);
    pblk->tsk_buf[pblk->trans_len - 2] = uCrc1 & 0x00FF;
    pblk->tsk_buf[pblk->trans_len - 1] = uCrc1 >> 8;

    //-------------Transmitter frame---------------------------------
    for (i = 0; i < pblk->trans_len; i++)
    {
        USART_SendData(pUSARTx, pblk->tsk_buf[i]);
        while (USART_GetFlagStatus(pUSARTx, USART_FLAG_TC) == RESET)
            ;
    }
}

static void ModbusSvr_error_respose(Modbus_block *pblk, USART_TypeDef *pUSARTx)
{
    u16 uCrc1;
    int i;

    pblk->tsk_buf[1] |= 0x80;
    pblk->tsk_buf[2] = pblk->errno;

    //-----------Product CRC byte------------------------------------
    uCrc1 = CRC16(pblk->tsk_buf, 3);
    pblk->tsk_buf[3] = uCrc1 & 0x00FF;
    pblk->tsk_buf[4] = uCrc1 >> 8;

    //-------------Transmitter frame---------------------------------
    for (i = 0; i < 5; i++)
    {
        USART_SendData(pUSARTx, pblk->tsk_buf[i]);
        while (USART_GetFlagStatus(pUSARTx, USART_FLAG_TC) == RESET)
            ;
    }
}

void Usart_SendByte(USART_TypeDef *pUSARTx, uint8_t ch)
{
    USART_SendData(pUSARTx, ch);

    while (USART_GetFlagStatus(pUSARTx, USART_FLAG_TXE) == RESET)
        ;
}

void Usart_SendString(USART_TypeDef *pUSARTx, char *str)
{
    unsigned int k = 0;
    do
    {
        Usart_SendByte(pUSARTx, *(str + k));
        k++;
    } while (*(str + k) != '\0');

    while (USART_GetFlagStatus(pUSARTx, USART_FLAG_TC) == RESET)
    {
    }
}

void Usart_SendHalfWord(USART_TypeDef *pUSARTx, uint16_t ch)
{
    uint8_t temp_h, temp_l;

    temp_h = (ch & 0XFF00) >> 8;
    temp_l = ch & 0XFF;

    USART_SendData(pUSARTx, temp_h);
    while (USART_GetFlagStatus(pUSARTx, USART_FLAG_TXE) == RESET)
        ;

    USART_SendData(pUSARTx, temp_l);
    while (USART_GetFlagStatus(pUSARTx, USART_FLAG_TXE) == RESET)
        ;
}
